--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://img.icons8.com/pulsar-line/48/portfolio.png" width="48" height="48" alt="portfolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark" />
     <title>Giacomo Catelan</title>
   </head>
   <!-- h-dvh: full viewport height (dynamic, adjusts for mobile browser chrome)
-       overflow-hidden: no scrollbars
        bg-grid-pattern: subtle dash grid background defined in index.css -->
-  <body class="dark h-dvh overflow-hidden bg-grid-pattern">
+  <body class="dark h-dvh bg-grid-pattern" style="background-color: #0a0a0a">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
