--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark" />
     <title>Giacomo Catelan</title>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet" />
   </head>
   <!-- h-dvh: full viewport height (dynamic, adjusts for mobile browser chrome)
        bg-grid-pattern: subtle dash grid background defined in index.css -->
-  <body class="dark h-dvh bg-grid-pattern" style="background-color: #0a0a0a">
+  <body class="dark h-dvh bg-grid-pattern font-mono" style="background-color: #0a0a0a">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
